[tool.poetry]
name = "graph-relax"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pairlist = "^0.5.1.3"
networkx = "^3.4.2"
numpy = "1.26.4"

[tool.package]
include = ["graph_relax.py"]  # my_library.pyをパッケージに含める

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
